# AprilTag

./: CMakeLists.txt  debug_clusters.pnm  debug_lines.ps  debug_output.pnm  debug_output.ps  debug_preprocess.pnm  debug_quads.ps  debug_quads_fixed.pnm  debug_quads_raw.pnm  debug_samples.pnm  debug_segmentation.pnm  debug_threshold.pnm
inc/: aprilTagLocator.hpp
src/: aprilTagLocator.cpp  main.cpp
